# limbo_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp  plot.R
limbo/acqui/: gp_ucb.hpp  ucb.hpp
limbo/bayes_opt/: bo_base.hpp  boptimizer.hpp
limbo/init/: random_sampling.hpp
limbo/kernel/: matern_five_halves.hpp  matern_three_halves.hpp  squared_exp_ard.hpp
limbo/model/: gp.hpp
limbo/opt/: nlopt_no_grad.hpp
limbo/stat/: console_summary.hpp
